--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "eslint-check"
   ],
   "scripts": {
-    "start": "webpack serve --config ./webpack/development.config.js --config ./webpack/common.config.js --merge",
+    "start": "webpack serve --config ./webpack/development.config.js",
+    "build": "webpack --config ./webpack/development.config.js",
     "eslint-check": "eslint .",
     "eslint-fix": "eslint . --fix"
   },
   "author": "dat.dinh@dinovative.com",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
