--- a/package.json
+++ b/package.json
@@ -15,15 +15,16 @@
     "eslint-check"
   ],
   "scripts": {
-    "start": "webpack serve --config ./webpack/development.config.js",
-    "build": "webpack --config ./webpack/development.config.js",
+    "start": "webpack serve --config webpack/developer.config.js",
+    "build": "webpack --mode=production --config webpack/production.config.js",
+    "serve": "webpack serve --mode=production --config webpack/production.config.js",
     "eslint-check": "eslint .",
-    "eslint-fix": "eslint . --fix"
+    "eslint-fix": "eslint . --fix",
+    "clean": "rm -rf build"
   },
   "author": "dat.dinh@dinovative.com",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
@@ -38,6 +39,10 @@
     "@webpack-cli/init": "^1.1.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "compression-webpack-plugin": "^7.1.2",
+    "copy-webpack-plugin": "^8.1.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-react": "^11.0.1",
@@ -51,7 +56,10 @@
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
     "jsdoc": "^3.6.6",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
+    "postcss-safe-parser": "^5.0.2",
     "svg-url-loader": "^7.1.1",
+    "sw-precache-webpack-plugin": "^1.0.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
