--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "eslint-check"
   ],
   "scripts": {
-    "start": "webpack serve --config webpack/developer.config.js",
+    "start": "webpack serve --config webpack/development.config.js",
     "build": "webpack --mode=production --config webpack/production.config.js",
     "serve": "webpack serve --mode=production --config webpack/production.config.js",
     "eslint-check": "eslint .",
@@ -25,6 +25,7 @@
   "author": "dat.dinh@dinovative.com",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
