--- a/package.json
+++ b/package.json
@@ -25,12 +25,16 @@
   "author": "dat.dinh@dinovative.com",
   "license": "ISC",
   "dependencies": {
+    "@manaflair/redux-batch": "^1.0.0",
+    "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.13.0",
@@ -43,7 +47,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^8.1.0",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.5.1",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-react": "^11.0.1",
@@ -63,6 +67,7 @@
     "sw-precache-webpack-plugin": "^1.0.0",
     "webpack": "^5.28.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "webpack-glob-loader": "^1.0.0"
   }
 }
