--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "compression-webpack-plugin": "^7.1.2",
     "copy-webpack-plugin": "^8.1.0",
+    "css-loader": "^5.2.4",
     "dotenv": "^8.5.1",
     "eslint": "^7.22.0",
     "eslint-config-standard": "^16.0.2",
@@ -60,12 +61,16 @@
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.1",
+    "import-glob-loader": "^1.1.0",
     "jsdoc": "^3.6.6",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-safe-parser": "^5.0.2",
+    "sass": "^1.32.12",
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
     "sw-precache-webpack-plugin": "^1.0.0",
-    "webpack": "^5.28.0",
+    "webpack": "^5.36.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-glob-loader": "^1.0.0"
