--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
     "@manaflair/redux-batch": "^1.0.0",
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
+    "react-toastify": "^7.0.4",
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
