--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_PORT = 3000
-REACT_APP_PROXY = https://jsonplaceholder.typicode.com/
+REACT_APP_PORT = 4000
+REACT_APP_PROXY = http://127.0.0.1:3000/
