--- a/package.json
+++ b/package.json
@@ -76,5 +76,6 @@
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
     "webpack-glob-loader": "^1.0.0"
-  }
+  },
+  "proxy": "http://127.0.0.1:3000/"
 }
