--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@manaflair/redux-batch": "^1.0.0",
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
+    "express": "^4.17.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dev-utils": "^11.0.4",
@@ -75,7 +76,7 @@
     "webpack": "^5.36.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
-    "webpack-glob-loader": "^1.0.0"
-  },
-  "proxy": "http://127.0.0.1:3000/"
+    "webpack-glob-loader": "^1.0.0",
+    "webpack-manifest-plugin": "^3.1.1"
+  }
 }
