--- a/package.json
+++ b/package.json
@@ -78,5 +78,6 @@
     "webpack-dev-server": "^3.11.2",
     "webpack-glob-loader": "^1.0.0",
     "webpack-manifest-plugin": "^3.1.1"
-  }
+  },
+  "proxy": "http://127.0.0.1:3000/"
 }
