--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
