--- a/.eslintrc
+++ b/.eslintrc
@@ -27,6 +27,7 @@
       "error",
       2
     ],
+    "react/jsx-no-undef": "error",
     "react/jsx-uses-vars": "error",
     "react/jsx-uses-react": "error",
     "react/jsx-indent": "off",
