--- a/package.json
+++ b/package.json
@@ -26,13 +26,12 @@
   "license": "ISC",
   "dependencies": {
     "@manaflair/redux-batch": "^1.0.0",
+    "@material-ui/core": "^4.11.4",
     "@reduxjs/toolkit": "^1.5.1",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "react": "^17.0.2",
     "react-cookie": "^4.0.3",
-    "react-dev-utils": "^11.0.4",
     "react-dom": "^17.0.2",
     "react-facebook-login": "^4.1.1",
     "react-redux": "^7.2.4",
@@ -53,14 +52,15 @@
     "copy-webpack-plugin": "^8.1.0",
     "css-loader": "^5.2.4",
     "dotenv": "^8.5.1",
-    "eslint": "^7.22.0",
+    "eslint": "^7.29.0",
     "eslint-config-standard": "^16.0.2",
     "eslint-config-standard-react": "^11.0.1",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-compat": "^3.9.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.3.1",
-    "eslint-plugin-react": "^7.23.1",
+    "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-standard": "^5.0.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
@@ -69,11 +69,14 @@
     "jsdoc": "^3.6.6",
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-safe-parser": "^5.0.2",
+    "react": "^17.0.2",
+    "react-dev-utils": "^11.0.4",
     "sass": "^1.32.12",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^7.1.1",
     "sw-precache-webpack-plugin": "^1.0.0",
+    "url-loader": "^4.1.1",
     "webpack": "^5.36.2",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2",
